--- a/myapp/static/css/responsive.css
+++ b/myapp/static/css/responsive.css
@@ -1,129 +1,167 @@
-@media (max-width: 1120px) {}
+@media (max-width: 1120px) {
+    .agency_section .agency_container .box {
+        width: 70%;
+    }
+}
 
 @media (max-width: 992px) {
-  .hero_area {
-    min-height: auto;
-  }
+    .navbar-brand {
+        margin-bottom: 0;
+    }
 
-  .navbar-nav {
-    align-items: center;
-  }
+    .custom_nav-container {
+        flex-direction: row;
+    }
 
-  .custom_nav-container .navbar-toggler {
-    margin-bottom: 15px;
-  }
+    #navbarSupportedContent {
+        margin-top: 25px;
+    }
 
-  .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link {
-    padding: 10px 25px;
-    margin: 5px 0;
-  }
+    .custom_nav-container .nav_search-btn {
+        background-position: center;
+    }
 
-  .custom_nav-container.navbar-expand-lg .form-inline {
-    justify-content: center;
-  }
+    .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link {
+        margin: 7px 15px;
+    }
 
-  .custom_nav-container.navbar-expand-lg {
-    padding-top: 10px;
-    align-items: center;
-  }
+    .slider_section .detail-box {
+        width: 100%;
+        margin: 45px 0;
+    }
 
-  .slider_section {
-    padding: 45px 0 150px 0;
-  }
+    .slider_section .carousel-indicators li {
+        font-size: 3.5rem;
+    }
 
-  .sub_page .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item .nav-link {
-    padding-bottom: 15px;
-  }
+    .agency_section .agency_container .box {
+        width: 85%;
+        padding: 90px 55px;
+    }
 }
 
 @media (max-width: 768px) {
-  .slider_section ol.carousel-indicators {
-    justify-content: center;
-  }
+    .hero_area {
+        height: auto;
+    }
 
-  .slider_section {
-    text-align: center;
-  }
+    .slider_section {
+        padding: 0 25px;
+    }
 
-  .slider_section .img-box {
-    margin-top: 35px;
-  }
+    .slider_section .slider_container {
+        padding: 20px;
+    }
 
-  .slider_section .detail-box .btn-box {
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+    .slider_section .carousel-indicators {
+        right: -40px;
+    }
 
-  .about_section .heading_container {
-    margin-bottom: 0;
-  }
+    .slider_section .detail-box {
+        padding-left: 0;
+        text-align: center;
+    }
 
-  .about_section .row {
-    flex-direction: column-reverse;
-  }
+    .slider_section .carousel_btn-box {
+        right: 50%;
+        transform: translateX(50%);
+    }
 
-  .about_section .detail-box {
-    margin-left: 0;
-    width: 100%;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
-  }
+    .slider_section .detail-box a {
+        margin-bottom: 35px;
+    }
 
-  .service_section .service_container {
-    flex-wrap: wrap;
-  }
+    .portfolio_section .portfolio_container .box-1,
+    .portfolio_section .portfolio_container .box-2 {
+        flex-direction: column;
+        padding: 0;
+    }
 
-  .client_section .carousel_btn-box {
-    margin-top: 25px;
-  }
+    .started_section .heading_container {
 
-  .client_section .carousel-control-prev,
-  .client_section .carousel-control-next {
-    position: unset;
-    transform: none;
-    margin: 0 2.5px;
-  }
+        text-align: center;
+        align-items: center;
+    }
 
-  .info_section .row .col-md-3 {
+    .started_section .btn-box {
+        justify-content: center;
+        margin-top: 25px;
+    }
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+    .agency_section .agency_container {
+        padding: 75px 45px;
+    }
 
-  }
+    .agency_section .agency_container .box {
+        width: 100%;
+        padding: 75px 25px;
+    }
 
-  .info_section .info_logo {
-    align-items: center;
-  }
+    .client_section .box {
+        width: 100%;
+    }
 
-  .info_section .info_form .social_box {
-    justify-content: center;
-  }
+    .info_section .row>div {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-  .info_section .info_form .social_box a {
-    margin: 0 5px;
-  }
+    }
+
+    .logo_container.layout_padding {
+
+        padding: 45px 0;
+
+    }
 }
 
 @media (max-width: 576px) {
-  .header_top a span {
-    display: none;
-  }
+    .slider_section .carousel-indicators {
+        display: none;
+    }
 
-  .slider_section .detail-box h1 {
-    font-size: 2.5rem;
-    line-height: 55px;
-  }
+    .portfolio_section .portfolio_container {
+        margin: 45px 25px 0;
+    }
+
+    .agency_section .agency_container {
+        margin: 45px 0;
+        padding: 45px 15px;
+    }
+
+    .logo_section .logo_container {
+        margin: 55px 25px 0;
+    }
+
+    .info_section {
+        margin: 0 25px 25px;
+    }
+
+    .logo_container.layout_padding {
+
+        padding: 25px 0;
+
+    }
+
 }
 
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+    .slider_section .detail-box h1 {
+        font-size: 3.5rem;
+    }
+}
 
 @media (max-width: 420px) {}
 
-@media (max-width: 376px) {}
+@media (max-width: 376px) {
+    .slider_section .detail-box h1 {
+        font-size: 3rem;
+    }
+}
 
 @media (min-width: 1200px) {
-  .container {
-    max-width: 1170px;
-  }
+    .container {
+        max-width: 1170px;
+    }
 }
