--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -105,16 +105,16 @@
         <div class="col-md-5 col-lg-4 px-0">
           <form action="">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" name="name"/>
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="gmail" placeholder="Gmail" name="gmail"/>
             </div>
             <div>
-              <input type="text" placeholder="Phone" />
+              <input type="text" placeholder="Phone" name="phone"/>
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Message" name="message"/>
             </div>
             <div class="d-flex ">
               <button>
