--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -103,7 +103,9 @@
           </div>
         </div>
         <div class="col-md-5 col-lg-4 px-0">
-          <form action="">
+          <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
             <div>
               <input type="text" placeholder="Name" name="name"/>
             </div>
@@ -117,9 +119,7 @@
               <input type="text" class="message-box" placeholder="Message" name="message"/>
             </div>
             <div class="d-flex ">
-              <button>
-                SEND
-              </button>
+              <button type="submit" name='send'>SEND</button>
             </div>
           </form>
         </div>
@@ -128,7 +128,7 @@
   </section>
 
   <!-- end contact section -->
-
+  
   <!-- client section -->
 
   <section class="client_section layout_padding-bottom">
