--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -103,18 +103,20 @@
           </div>
         </div>
         <div class="col-md-5 col-lg-4 px-0">
-          <form action="">
+          <form action="" method = "POST">
+            {% csrf_token %}
+            {{ form.as_p }}
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Name" name = "name"/>
             </div>
             <div>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" name = "email" />
             </div>
             <div>
-              <input type="text" placeholder="Phone" />
+              <input type="text" placeholder="Phone" name = "phone"/>
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Message" name = "message" />
             </div>
             <div class="d-flex ">
               <button>
