--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -15,7 +15,7 @@
   <meta name="author" content="" />
 
   <title>
-    Diffuso
+    Jenesis
   </title>
 
   <!-- slider stylesheet -->
@@ -586,7 +586,6 @@
 
 
   <!-- info section -->
-
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
@@ -666,7 +665,6 @@
     <!-- footer section -->
 
   </section>
-
   <!-- end info section -->
 
 
