--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -1,100 +1,33 @@
-<!DOCTYPE html>
-<html>
+{% extends "basic.html" %}
 {% load static %}
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+{% block activeButton %}
+<li class="nav-item ">
+    <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+  </li>
+  <li class="nav-item ">
+    <a class="nav-link" href="{% url 'about' %}">
+      About
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'service' %}">
+      Services
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'portfolio' %}">
+      Portfolio
+    </a>
+  </li>
+  <li class="nav-item active">
+    <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+  </li>
+{% endblock %}
 
-  <title>
-    Jenesis
-  </title>
+{% block mainContent %}
+<!-- contact section -->
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700&display=swap" rel="stylesheet" />
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
-
-  <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
-
-  <style>
-    .scroll-container {
-        display: flex;
-        overflow-x: auto;
-        white-space: nowrap;
-        width: 100%;
-    }
-  </style>
-
-</head>
-
-<body class="sub_page">
-  <div class="hero_area">
-    <!-- header section starts -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-          <a class="navbar-brand" href="index.html">
-            <img src="{% static 'images/logo.png' %}" alt="" />
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item ">
-                  <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item ">
-                  <a class="nav-link" href="{% url 'about' %}">
-                    About
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'service' %}">
-                    Services
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'portfolio' %}">
-                    Portfolio
-                  </a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
-  <!-- end hero area -->
-
-
-  <!-- contact section -->
-
-  <section class="contact_section layout_padding-bottom layout_padding2-top">
+<section class="contact_section layout_padding-bottom layout_padding2-top">
     <div class="container px-0">
       <div class="heading_container">
         <h2 class="">
@@ -139,27 +72,6 @@
 
   <!-- end contact section -->
 
-  {% comment %} <!-- Handle Error Email Section-->
-   <div class="modal fade" id="emailErrorModal" tabindex="-1" role="dialog" aria-labelledby="emailErrorModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="emailErrorModalLabel">Invalid Email</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Please enter a valid email address.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-  </div>
-  <!-- end Handle Error Email Section--> {% endcomment %}
-  
   <!-- client section -->
   <section class="client_section layout_padding-bottom">
     <div class="container">
@@ -195,98 +107,4 @@
   </section>
 
   <!-- end client section -->
-
-
-  <!-- info section -->
-
-  <section class="info_section  layout_padding2-top">
-    <div class="social_container">
-      <div class="social_box">
-        <a href="">
-          <img src="{% static 'images/fb.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/twitter.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/linkedin.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/youtube.png' %}" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="info_container ">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              ABOUT US
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              Instagram
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              NEED HELP
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              CONTACT US
-            </h6>
-            <div class="info_link-box">
-              <a href="">
-                <img src="{% static 'images/location.png' %}" alt="">
-                <span> Gb road 123 london Uk </span>
-              </a>
-              <a href="">
-                <img src="{% static 'images/call.png' %}" alt="">
-                <span>+01 12345678901</span>
-              </a>
-              <a href="">
-                <img src="{% static 'images/mail.png' %}" alt="">
-                <span> demo@gmail.com</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- footer section -->
-    <section class=" footer_section">
-      <div class="container">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
-        </p>
-      </div>
-    </section>
-    <!-- footer section -->
-
-  </section>
-
-  <!-- end info section -->
-
-
-  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock %}
