add portfolio photo

--- a/myapp/templates/basic.html
+++ b/myapp/templates/basic.html
@@ -70,7 +70,7 @@
 
   <!-- info section -->
   <section class="info_section  layout_padding2-top">
-    <div class="social_container">
+    {% comment %} <div class="social_container">
       <div class="social_box">
         <a href="">
           <img src="{% static 'images/fb.png' %}" alt="">
@@ -84,7 +84,7 @@
         <a href="">
           <img src="{% static 'images/youtube.png' %}" alt="">
         </a>
-      </div>
+      </div> {% endcomment %}
     </div>
     <div class="info_container ">
       <div class="container">
@@ -94,24 +94,23 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              Two undergraduate Taiwanese students majoring computer science. 
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              Instagram
+              接案網站
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
+              目前在 freelancer 以及 找任務 平台積極洽詢中。
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
-              NEED HELP
+              Why us?
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
+              新鮮的肝，新鮮的腦。
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
@@ -119,10 +118,10 @@
               CONTACT US
             </h6>
             <div class="info_link-box">
-              <a href="">
+              {% comment %} <a href="">
                 <img src="{% static 'images/location.png' %}" alt="">
-                <span> Gb road 123 london Uk </span>
-              </a>
+                <span> Online </span>
+              </a> {% endcomment %}
               <a href="">
                 <img src="{% static 'images/call.png' %}" alt="">
                 <span>+01 12345678901</span>
@@ -141,7 +140,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">Jenesis Studio</a>
         </p>
       </div>
     </section>
