--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "poppins", sans-serif;
+  font-family: "poppins",
+ sans-serif;
   color: #101010;
   background-color: #ffffff;
 }
@@ -387,6 +388,9 @@ a:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  /* -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; */
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -455,6 +459,7 @@ a:focus {
 
 .portfolio_section .portfolio_container .box-1,
 .portfolio_section .portfolio_container .box-2 {
+  -webkit-box-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
