--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,85 +1,32 @@
-<!DOCTYPE html>
-<html>
-
+{% extends "basic.html" %}
 {% load static %}
-
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-
-  <title>
-    Jenesis
-  </title>
-
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700&display=swap" rel="stylesheet" />
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
-
-  <!-- Custom styles for this template -->
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
-</head>
-
-<body>
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-          <a class="navbar-brand" href="{%url 'index' %}">
-            <img src="{% static 'images/logo.png' %}" alt="" />
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'about' %}">
-                    About
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'service' %}">
-                    Services
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'portfolio' %}">
-                    Portfolio
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
+{% block activeButton %}
+  <ul class="navbar-nav  ">
+    <li class="nav-item active">
+      <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'about' %}">
+        About
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'service' %}">
+        Services
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'portfolio' %}">
+        Portfolio
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+    </li>
     <!-- end header section -->
+{% endblock %}
+
+{% block mainContent %}
     <!-- slider section -->
 
     <section class="slider_section">
@@ -115,7 +62,7 @@
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
                       </p>
-                      <a href="">
+                      <a href="{% url 'contact' %}">
                         Contact Us
                       </a>
                     </div>
@@ -141,7 +88,7 @@
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
                       </p>
-                      <a href="">
+                      <a href="{% url 'contact' %}">
                         Contact Us
                       </a>
                     </div>
@@ -167,7 +114,7 @@
                       <p>
                         There are many variations of passages of Lorem Ipsum available, but the
                       </p>
-                      <a href="">
+                      <a href="{% url 'contact' %}">
                         Contact Us
                       </a>
                     </div>
@@ -193,66 +140,64 @@
   </div>
   <!-- end hero area -->
 
+
   <!-- service section -->
 
-  <section class="service_section layout_padding">
+  <section class="service_section layout_padding-bottom layout_padding2-top">
     <div class="container">
       <div class="heading_container">
         <h2>
           Ser<span>vi</span>ces
         </h2>
-        <p>
-          adipiscingelit,sed do eiusmod tempor incididunt ut labore et dolore magn
-        </p>
       </div>
       <div class="row">
         <div class="col-lg-6 ">
           <div class="img-container tab-content">
             <div class="img-box tab-pane fade show active" id="img1" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-webdev.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img2" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-llm.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img3" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-web3.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img4" role="tabpanel">
               <img src="{% static 'images/service-img.jpg' %}" alt="" />
             </div>
           </div>
         </div>
+
         <div class="col-lg-6">
           <div class="detail-container nav nav-tabs" id="myTab" role="tablist">
             <div class="detail-box active" id="img1-tab" data-toggle="tab" href="#img1" role="tab" aria-selected="true">
               <h4>
-                Website <br />
-                design
+                Web <br />
+                Development
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img2" role="tab" aria-selected="false">
               <h4>
-                Logo <br />
-                design
+                AI model <br />
+                & LLM
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img3" role="tab" aria-selected="false">
               <h4>
-                brochure <br />
-                design
+                Web3 <br />
+                Development
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img4" role="tab" aria-selected="false">
               <h4>
-                visiting card <br />
-                design
+                Others
               </h4>
             </div>
           </div>
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="{% url 'service' %}">
           Read More
         </a>
       </div>
@@ -262,7 +207,6 @@
   <!-- end service section -->
 
   <!-- portfolio section -->
-
   <section class="portfolio_section">
     <div class="heading_container">
       <h2>
@@ -551,129 +495,5 @@
 
   <!-- end contact section -->
 
-  <!-- client section -->
 
-  <section class="client_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          What <span>says</span> our clients
-        </h2>
-      </div>
-      <div class="box">
-        <div class="client_id">
-          <div class="name">
-            <h4>
-              Sandy <br>
-              Nor
-            </h4>
-          </div>
-          <div class="img-box">
-            <img src="{% static 'images/client.jpg' %}" alt="">
-          </div>
-        </div>
-        <div class="detail-box">
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem
-          </p>
-          <img src="{% static 'images/quote.png' %}" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end client section -->
-
-
-  <!-- info section -->
-  <section class="info_section  layout_padding2-top">
-    <div class="social_container">
-      <div class="social_box">
-        <a href="">
-          <img src="{% static 'images/fb.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/twitter.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/linkedin.png' %}" alt="">
-        </a>
-        <a href="">
-          <img src="{% static 'images/youtube.png' %}" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="info_container ">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              ABOUT US
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              Instagram
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipi
-              scing elit, sed doLorem ipsum dolor sit
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              NEED HELP
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              CONTACT US
-            </h6>
-            <div class="info_link-box">
-              <a href="">
-                <img src="{% static 'images/location.png' %}" alt="">
-                <span> Gb road 123 london Uk </span>
-              </a>
-              <a href="">
-                <img src="{% static 'images/call.png' %}" alt="">
-                <span>+01 12345678901</span>
-              </a>
-              <a href="">
-                <img src="{% static 'images/mail.png' %}" alt="">
-                <span> demo@gmail.com</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- footer section -->
-    <section class=" footer_section">
-      <div class="container">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
-        </p>
-      </div>
-    </section>
-    <!-- footer section -->
-
-  </section>
-  <!-- end info section -->
-
-
-  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock %}
