--- a/myapp/templates/portfolio.html
+++ b/myapp/templates/portfolio.html
@@ -38,7 +38,7 @@
     <div class="portfolio_container layout_padding">
       <div class="box-1">
         <div class="img-box b-1">
-          <img src="{% static 'images/p1.jpg' %}" alt="">
+          <img src="{% static 'images/dennis.png' %}" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="img-box b-2">
-          <img src="{% static 'images/p2.jpg' %}" alt="">
+          <img src="{% static 'images/jensen.png' %}" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -60,30 +60,16 @@
           </div>
         </div>
       </div>
-      <div class="box-2">
+      {% comment %} <div class="box-2">
         <div class="img-box b-3">
           <img src="{% static 'images/p3.jpg' %}" alt="">
-          <div class="btn-box">
-            <a href="" class="btn-1">
-
-            </a>
-            <a href="" class="btn-2">
-
-            </a>
-          </div>
+          
         </div>
         <div class="img-box b-4">
           <img src="{% static 'images/p4.jpg' %}" alt="">
-          <div class="btn-box">
-            <a href="" class="btn-1">
-
-            </a>
-            <a href="" class="btn-2">
-
-            </a>
-          </div>
+          
         </div>
-      </div>
+      </div> {% endcomment %}
     </div>
   </section>
 
