--- a/myapp/templates/service.html
+++ b/myapp/templates/service.html
@@ -34,59 +34,54 @@
           Ser<span>vi</span>ces
         </h2>
         <p>
-          adipiscingelit,sed do eiusmod tempor incididunt ut labore et dolore magn
+          Jenesis 所提供的服務
         </p>
       </div>
       <div class="row">
         <div class="col-lg-6 ">
           <div class="img-container tab-content">
             <div class="img-box tab-pane fade show active" id="img1" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-webdev.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img2" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-llm.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img3" role="tabpanel">
-              <img src="{% static 'images/service-img.jpg' %}" alt="" />
+              <img src="{% static 'images/service-web3.png' %}" alt="" />
             </div>
             <div class="img-box tab-pane fade  " id="img4" role="tabpanel">
               <img src="{% static 'images/service-img.jpg' %}" alt="" />
             </div>
           </div>
         </div>
+
         <div class="col-lg-6">
           <div class="detail-container nav nav-tabs" id="myTab" role="tablist">
             <div class="detail-box active" id="img1-tab" data-toggle="tab" href="#img1" role="tab" aria-selected="true">
               <h4>
-                Website <br />
-                design
+                Web <br />
+                Development
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img2" role="tab" aria-selected="false">
               <h4>
-                Logo <br />
-                design
+                AI model <br />
+                & LLM
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img3" role="tab" aria-selected="false">
               <h4>
-                brochure <br />
-                design
+                Web3 <br />
+                Development
               </h4>
             </div>
             <div class="detail-box" id="img2-tab" data-toggle="tab" href="#img4" role="tab" aria-selected="false">
               <h4>
-                visiting card <br />
-                design
+                Others
               </h4>
             </div>
           </div>
         </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
       </div>
     </div>
   </section>
